# detflow

./: .gitignore  .gitmodules  .jenkins_script.sh  .jenkins_script1.sh  .jenkins_script2.sh  .jenkins_script3.sh  .travis.yml  CHANGELOG.md  DEVLOG.txt  Dockerfile  Makefile  README.md  Setup.hs  cabal.project  detmonad.cabal  index.html  params.json  setenv.sh  stack.yaml
benchmark_scripts/: .gitignore  common.sh  intro.sh  jenkins_bioinfo.sh  jenkins_detmake.sh
benchmark_scripts/bioinfo/: bwa.sh  clustal.sh  mothur.sh  raxml.sh
benchmark_scripts/detmake/: 01_dummy_build.sh  03_raxml.sh  06_splash.sh
cbits/: .gitignore  Makefile  README.md  exportVariable.sh  libdet.c  replacePasswd.txt
cbits/Tests/envTest/: getenv.c  setenv.c
cbits/Tests/execTest/: exec.c  time.c
cbits/Tests/forkTest/: Makefile  fork.c  forkWait.c  forkWaitid.c  forkWaitpid.c
cbits/Tests/macroTest/: Makefile  macro.c
cbits/Tests/mallocTest/: Makefile  mallocTest.c
cbits/Tests/openTest/: Makefile  testOpen.c
cbits/Tests/pidTest/: Makefile  pid.c
cbits/Tests/randTest/: Makefile  README.md  randTest  randTest.c
cbits/Tests/statTest/: Makefile  fstat.c  lstat.c  stat.c  temp.hs
cbits/Tests/timeTest/: Makefile  README.md  time.c  time2.c  timeClib.txt
cbits/Tests/vforkTest/: Makefile  vfork  vfork.c
cbits/ptrace-poc/: Makefile  ppoc.cpp
detmonad-benchdata/label_CREST_cutter/bioinfo/buildno_6/mothur/: bench.csv
examples/bioinfo/: .gitignore  Makefile.common
examples/bioinfo/bwa/: Makefile  RunIt.hs
examples/bioinfo/clustal/: Makefile  RunIt.hs
examples/bioinfo/hmmer/: Makefile  RunIt.hs
examples/bioinfo/mothur/: .dockerignore  Dockerfile  Makefile  RunIt.hs
examples/bioinfo/raxml/: Makefile  RunIt.hs
examples/detmake/: .gitignore  fetch_programs.sh  run_all_tests.sh
examples/detmake/01_dummy_build/: Makefile  dep1.c  dep1.h  dep2.c  dep2.h  dep3.c  dep3.h  dep4.c  dep4.h  dep5.c  dep5.h  dep6.c  dep6.h  dep7.c  dep7.h  dep8.c  dep8.h  main.c  run_detmake.sh
examples/detmake/02_readline/: Makefile
examples/detmake/05_wildcardapalooza/: Makefile
examples/detmake/app/: Detmake.hs  DetmakeLib.hs  Makefile.hs  detmake.cabal
examples/detmake/app/makefile-0.1.1.0/: makefile.cabal
examples/detmake/app/makefile-0.1.1.0/src/: Test.hs
examples/detmake/app/makefile-0.1.1.0/src/Data/: Makefile.hs
examples/detmake/app/makefile-0.1.1.0/src/Data/Makefile/: Parse.hs  Render.hs
examples/detmake/app/makefile-0.1.1.0/src/Data/Makefile/Parse/: Internal.hs
examples/detmake/app/makefile-0.1.1.0/src/Data/Makefile/Render/: Internal.hs
examples/detmake/app/makefile-0.1.1.0/test-data/basic/: Makefile1  Makefile2
examples/detmake/patches/: raxml_modified_Makefile
examples/ld_preload/: .gitignore  Makefile  custom_fopen.c  main.c
examples/microbenchmarks/: .gitignore  DEVLOG.txt  Makefile  README.md  empty.c  microbenchmarks.cabal  process_bomb.c  run_microbenchmark.sh  stack.yaml
examples/microbenchmarks/src/: Main.hs
examples/should_fail/: CatEtc.hs  Date.hs  WriteDisallowed.hs
examples/should_run/hello_files/: HelloFiles.hs  run_me.sh
examples/should_run/hello_shell/: Bash.hs  Bash2.hs  Cat.hs  Env.hs  Gcc.hs  HeadUsr.hs  HelloShell_ShouldFail.hs  Touch.hs  run_me.sh
examples/should_run/hello_shell/in/: bash1.sh  bash2.sh  bash3.sh  hello.txt
examples/should_run/hello_world/: HelloWorld.hs  run_me.sh
harness/: Main.hs
hs-ambrosia/: CHANGELOG.md  hs-ambrosia.cabal
hs-ambrosia/src/Ambrosia/: Bindings.hsc
src/Control/Monad/: DetIO.hs
src/Control/Monad/DetIO/: Logging.hs  Perms.hs  Perms2.hs  Reexports.hs  System.hs  Unsafe.hs
tests/: DetMonadSpec.hs  DetPrintSpec.hs  PermSpec.hs  SystemTestsSpec.hs
