name:                detmake
version:             0.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
-- copyright:
category:            System
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable detmake
  main-is:             Detmake.hs
  other-modules:       DetmakeLib
  build-depends:       base                 >= 4.8  && < 5,
                       bytestring           >= 0.9  && < 0.11,
                       containers           >= 0.5  && < 0.7,
                       directory            >= 1.3  && < 1.4,
                       makefile             >= 0.1  && < 0.2,
                       optparse-applicative >= 0.13 && < 0.16,
                       parallel-io          >= 0.3  && < 0.4,
                       process              >= 1.4  && < 1.7,
                       regex-compat         >= 0.95 && < 0.97,
                       detmonad,
                       attoparsec,
                       text,
                       pretty-show,
                       extra,
                       filepath,
                       safe
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N4
